<resources>
    <string name="app_name">Lungs Guardian</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="new_to_this_platform">New to this platform?</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_signed_up">Already Signed up?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="lungs_guardian">Lungs Guardian</string>
    <string name="password_signup">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset password</string>
    <string name="reset">Reset</string>
    <string name="back_to_log_in">Back to log in</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="downloads">Downloads</string>
    <string name="required">Required</string>
    <string name="passwords_doesn_t_match">Passwords doesn\'t match</string>
    <string name="send_code">send code</string>
    <string name="forget_password">Forget password</string>
    <string name="code">Code</string>
    <string name="back_to_send_code">Back to send code</string>
    <string name="profile_photo">profile photo</string>
    <string name="change_password">Change Password</string>
    <string name="customize_your_profile">Customize your profile</string>
    <string name="this_account_is_already_registered">This account is already registered</string>
    <string name="logout">Logout</string>
    <string name="history">History</string>
    <string name="capture_by_camera">capture by camera</string>
    <string name="select_from_gallery">select from gallery</string>
    <string name="edit_your_email">Edit your email</string>
    <string name="your_new_email">Your new email</string>
    <string name="reset_email">Reset email</string>
    <string name="change_your_password">Change your password</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="your_new_name">Your new name</string>
    <string name="reset_name">Reset name</string>
    <string name="x_ray_insights_for_lungs">X-Ray Insights for Lungs</string>
    <string name="report">Report</string>
    <string name="change_your_picture">Change your picture</string>
    <string name="change_your_profile_picture">Change your profile picture</string>
    <string name="remove_profile_picture">Remove profile picture</string>
    <string name="optional_profile_picture">Optional profile picture</string>
    <string name="start">start</string>
    <string name="search_in_reports">Search in reports</string>
    <string name="delete_history">Delete History</string>
    <string name="generating_report">Generating Report</string>
    <string name="translate">ترجمها باستخدام جوجل</string>
    <string name="check_the_photo">check the photo</string>
    <string name="generate_report">Generate report</string>
    <string name="back_to_home">Back to home</string>
</resources>