<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_to_black">

    <TextView
        android:id="@+id/text_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/edit_your_email"
        android:textSize="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_reset_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_13sdp"
        android:hint="@string/your_new_email"
        android:textColorHint="@color/blue"
        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:boxStrokeColor="@color/black_to_white"
        app:boxStrokeErrorColor="@color/red"
        app:cursorColor="@color/blue"
        app:errorEnabled="true"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black_to_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_edit_email"
        app:startIconDrawable="@drawable/image_email"
        app:startIconTint="@color/blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_reset_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black_to_white"
            android:textSize="@dimen/_13sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_22sdp"
        android:backgroundTint="@color/blue"
        android:text="@string/reset_email"
        android:textColor="@color/white_to_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_text_reset_email"
        android:layout_marginBottom="@dimen/_10sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>