<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_5sdp"
    tools:context=".ui.home.check.CheckFragment"
    android:background="@color/white_to_black">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guide_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guide_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_the_photo"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guide_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guide_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_picked"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guide_60"
        app:layout_constraintTop_toTopOf="@id/horizontal_guide_10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_generate_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_22sdp"
        android:backgroundTint="@color/blue"
        android:text="@string/generate_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_picked" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_to_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_22sdp"
        android:backgroundTint="@color/blue"
        android:text="@string/back_to_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_generate_report" />


</androidx.constraintlayout.widget.ConstraintLayout>