<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment"
    android:isScrollContainer="false"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/black_to_white"
            app:layout_constraintTop_toTopOf="@id/btn_login"
            app:layout_constraintBottom_toBottomOf="@id/btn_login"
            app:layout_constraintLeft_toLeftOf="@id/btn_login"
            app:layout_constraintRight_toRightOf="@id/btn_login"
            android:visibility="gone"
            android:elevation="@dimen/_25sdp"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guide_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33"
            />
        <ImageView
            android:id="@+id/image_login"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/image_login"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guide_33"/>
        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/login"
            android:textSize="@dimen/_25sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guide_33" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_text_email_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_13sdp"
            android:hint="@string/email"
            android:textColorHint="@color/blue"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeColor="@color/black_to_white"
            app:boxStrokeErrorColor="@color/red"
            app:cursorColor="@color/blue"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black_to_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_login"
            app:startIconDrawable="@drawable/image_email"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black_to_white"
                android:textSize="@dimen/_13sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_text_password_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_13sdp"
            android:hint="@string/password"
            android:textColorHint="@color/blue"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeColor="@color/black_to_white"
            app:boxStrokeErrorColor="@color/red"
            app:cursorColor="@color/blue"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/blue"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black_to_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_text_email_login"
            app:startIconDrawable="@drawable/image_password"
            app:startIconTint="@color/blue"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:textColor="@color/black_to_white"
                android:textSize="@dimen/_13sdp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/text_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/forgot"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_text_password_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_22sdp"
            android:backgroundTint="@color/blue"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forgot" />

        <TextView
            android:id="@+id/text_new_to_this"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_15sdp"
            android:text="@string/new_to_this_platform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/register"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/text_new_to_this"
            app:layout_constraintStart_toEndOf="@id/text_new_to_this"
            app:layout_constraintTop_toTopOf="@+id/text_new_to_this" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>