<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:background="@color/white_to_black"
    tools:context=".ui.auth.forget.ForgetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guide_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33"
            />
        <ImageView
            android:id="@+id/image_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintHeight_percent="0.33"
            android:src="@drawable/access_key_blue_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guide_33"/>
        <TextView
            android:id="@+id/text_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/forget_password"
            android:textSize="@dimen/_25sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guide_33" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_text_email_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_13sdp"
            android:hint="@string/email"
            android:textColorHint="@color/blue"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeColor="@color/black_to_white"
            app:boxStrokeErrorColor="@color/red"
            app:cursorColor="@color/blue"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black_to_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forget_password"
            app:startIconDrawable="@drawable/image_email"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email_reset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black_to_white"
                android:textSize="@dimen/_13sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_22sdp"
            android:backgroundTint="@color/blue"
            android:text="@string/send_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_text_email_reset"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/black_to_white"
            app:layout_constraintTop_toTopOf="@id/btn_send_code"
            app:layout_constraintBottom_toBottomOf="@id/btn_send_code"
            app:layout_constraintLeft_toLeftOf="@id/btn_send_code"
            app:layout_constraintRight_toRightOf="@id/btn_send_code"
            android:visibility="gone"
            android:elevation="@dimen/_25sdp"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_22sdp"
            android:backgroundTint="@color/blue"
            android:text="@string/back_to_log_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_send_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>